# rcryptoport

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: cli.rs  config.rs  forex.rs  main.rs  model.rs  percent.rs  prices.rs
testdata/: portfolio1.json  portfolio2.json
