[package]
name = "rcryptoport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dirs = "3.0"
rust_decimal = "1.14.3"
rust_decimal_macros = "1.14.3"
ureq = "2.1.1"
ansi_term = "0.12.1"
