[package]
name = "rcryptoport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
dirs = "3.0"
rust_decimal = "1.14.3"
rust_decimal_macros = "1.14.3"
ureq = "2.1.1"
colored = "2.0.0"
lazy_static = "1.4.0"
clap = "2.33.3"
jemallocator = "0.3.0"
chrono = { version ="0.4.19",  features = ["serde", "rustc-serialize"] }

[dev-dependencies]
temp_testdir = "0.2"
